[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, -3, 0, 0, 0, 0, 420, 0, 0, 0, 0, 0, 418, 719, 0, 0, 0, 0, -4, 718, 0, 0, 0, 0, -1, -3 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
enemy_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0235294, 0, 0, 1 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 220, 450 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( -1, -3 )
rotation = 0.0071258

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
